# retails-analysis

./: .env  .gitignore  Dockerfile  README.md  dev.Dockerfile  docker-compose.yml  prod.Dockerfile  pyproject.toml
.config/: flake8.cfg  jupyter_notebook_config.py  mypy.cfg
.github/workflows/: check-dockerfile.yml  check-python.yml  lint.yml  python.yml
retails_analysis/: dispatch.py  import_dataset.py  import_test.py  mongo_test.py  spark_test.py  spark_test2.py
tests/: test_retails_analysis.py  test_retails_analysis2.py
